// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildCoverageOverviewDashboardModel correctly maps API response 1`] = `
Object {
  "metrics": Object {
    "totalEnabledRulesCount": 1,
    "totalRulesCount": 1,
  },
  "mitreTactics": Array [
    Object {
      "availableRules": Array [],
      "disabledRules": Array [],
      "enabledRules": Array [
        Object {
          "id": "test-rule-1",
          "name": "Test rule",
        },
      ],
      "id": "TA001",
      "name": "Tactic 1",
      "reference": "https://some-link/TA001",
      "techniques": Array [
        Object {
          "availableRules": Array [],
          "disabledRules": Array [],
          "enabledRules": Array [
            Object {
              "id": "test-rule-1",
              "name": "Test rule",
            },
          ],
          "id": "T001",
          "name": "Technique 1",
          "reference": "https://some-link/T001",
          "subtechniques": Array [
            Object {
              "availableRules": Array [],
              "disabledRules": Array [],
              "enabledRules": Array [
                Object {
                  "id": "test-rule-1",
                  "name": "Test rule",
                },
              ],
              "id": "T001.001",
              "name": "Subtechnique 1",
              "reference": "https://some-link/T001/001",
            },
            Object {
              "availableRules": Array [],
              "disabledRules": Array [],
              "enabledRules": Array [],
              "id": "T001.002",
              "name": "Subtechnique 2",
              "reference": "https://some-link/T001/002",
            },
          ],
        },
        Object {
          "availableRules": Array [],
          "disabledRules": Array [],
          "enabledRules": Array [
            Object {
              "id": "test-rule-1",
              "name": "Test rule",
            },
          ],
          "id": "T002",
          "name": "Technique 2",
          "reference": "https://some-link/T002",
          "subtechniques": Array [],
        },
      ],
    },
    Object {
      "availableRules": Array [],
      "disabledRules": Array [],
      "enabledRules": Array [
        Object {
          "id": "test-rule-1",
          "name": "Test rule",
        },
      ],
      "id": "TA002",
      "name": "Tactic 2",
      "reference": "https://some-link/TA002",
      "techniques": Array [
        Object {
          "availableRules": Array [],
          "disabledRules": Array [],
          "enabledRules": Array [
            Object {
              "id": "test-rule-1",
              "name": "Test rule",
            },
          ],
          "id": "T002",
          "name": "Technique 2",
          "reference": "https://some-link/T002",
          "subtechniques": Array [],
        },
      ],
    },
  ],
  "unmappedRules": Object {
    "availableRules": Array [],
    "disabledRules": Array [],
    "enabledRules": Array [],
  },
}
`;

exports[`buildCoverageOverviewDashboardModel correctly maps techniques that appear in multiple tactics 1`] = `
Object {
  "metrics": Object {
    "totalEnabledRulesCount": 2,
    "totalRulesCount": 2,
  },
  "mitreTactics": Array [
    Object {
      "availableRules": Array [],
      "disabledRules": Array [],
      "enabledRules": Array [
        Object {
          "id": "test-rule-1",
          "name": "Test rule",
        },
        Object {
          "id": "test-rule-2",
          "name": "Test rule 2",
        },
      ],
      "id": "TA001",
      "name": "Tactic 1",
      "reference": "https://some-link/TA001",
      "techniques": Array [
        Object {
          "availableRules": Array [],
          "disabledRules": Array [],
          "enabledRules": Array [],
          "id": "T001",
          "name": "Technique 1",
          "reference": "https://some-link/T001",
          "subtechniques": Array [
            Object {
              "availableRules": Array [],
              "disabledRules": Array [],
              "enabledRules": Array [],
              "id": "T001.001",
              "name": "Subtechnique 1",
              "reference": "https://some-link/T001/001",
            },
            Object {
              "availableRules": Array [],
              "disabledRules": Array [],
              "enabledRules": Array [],
              "id": "T001.002",
              "name": "Subtechnique 2",
              "reference": "https://some-link/T001/002",
            },
          ],
        },
        Object {
          "availableRules": Array [],
          "disabledRules": Array [],
          "enabledRules": Array [
            Object {
              "id": "test-rule-1",
              "name": "Test rule",
            },
            Object {
              "id": "test-rule-2",
              "name": "Test rule 2",
            },
          ],
          "id": "T002",
          "name": "Technique 2",
          "reference": "https://some-link/T002",
          "subtechniques": Array [],
        },
      ],
    },
    Object {
      "availableRules": Array [],
      "disabledRules": Array [],
      "enabledRules": Array [
        Object {
          "id": "test-rule-2",
          "name": "Test rule 2",
        },
      ],
      "id": "TA002",
      "name": "Tactic 2",
      "reference": "https://some-link/TA002",
      "techniques": Array [
        Object {
          "availableRules": Array [],
          "disabledRules": Array [],
          "enabledRules": Array [
            Object {
              "id": "test-rule-2",
              "name": "Test rule 2",
            },
          ],
          "id": "T002",
          "name": "Technique 2",
          "reference": "https://some-link/T002",
          "subtechniques": Array [],
        },
      ],
    },
  ],
  "unmappedRules": Object {
    "availableRules": Array [],
    "disabledRules": Array [],
    "enabledRules": Array [],
  },
}
`;
